--- a/Views/about.ejs
+++ b/Views/about.ejs
@@ -64,7 +64,7 @@
                             <div class="">
                               <br>
                                 <p class="fonts">Hi 👋🏻, I am a pre-final year undergrad at kamla Nehru Institute of Technology pursuing a Bachelor of Technology in Computer Science and Engineering.</p>
-                                <a href="https://d-ivyanshu.github.io/Personal-Portfolio/"><button class="buttons px-4 ms-3">Know More</button></a>  
+                                <a href="https://d-ivyanshu.github.io/divyanshu/"><button class="buttons px-4 ms-3">Know More</button></a>  
                             </div>
                           </div>
                         </div>
